--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,4 @@
 
 # Project target.
 target=android-14
+android.library.reference.1=../../adt-bundle-mac-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
