Added hdpi screen support. Fixed bug with scaled images. Added new message for finished level. Fixed bug with image reset after screen off. Fixed bug with slider (when you return and your image is not colorfull)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,6 +36,7 @@
 		<activity android:name="com.example.drawingfun.DrawerActivity"
 		    android:screenOrientation="landscape"
 		    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+		    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
 		    ></activity>
 		<activity android:name="com.kidsgames.start.DrawerSliderActivity"
 		    android:screenOrientation="landscape"
