--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 	<uses-sdk
 		android:minSdkVersion="8"
-		android:targetSdkVersion="17" />
+		android:targetSdkVersion="21" />
 
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -20,7 +20,7 @@
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme" >
 		<activity
-			android:name="com.kidsgames.start.MainMenu"
+			android:name="com.kidsgames.menu.MainMenu"
 			android:label="@string/app_name"
 			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
 			android:screenOrientation="landscape" >
@@ -30,23 +30,17 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="suvitruf.libgdxtutorial.PuzzleActivity"
-		    android:screenOrientation="landscape"
-		    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-		    ></activity>
-		<activity android:name="com.example.drawingfun.DrawerActivity"
+
+		<activity android:name="com.kidsgames.gamebase.DrawerActivity"
 		    android:screenOrientation="landscape"
 		    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
 		    android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-		    ></activity>
-		<activity android:name="com.kidsgames.start.DrawerSliderActivity"
+		   />
+		<activity android:name="com.kidsgames.menu.DrawerSliderActivity"
 		    android:screenOrientation="landscape"
 		    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-		    ></activity>
-				<activity android:name="com.kidsgames.start.PuzzleSliderActivity"
-		    android:screenOrientation="landscape"
-		    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-		    ></activity>
+		    />
+
 	</application>
 
 </manifest>
